--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3-android:1.2.1'
     implementation 'androidx.activity:activity:1.8.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
+    implementation 'com.google.android.gms:play-services-maps:19.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
