--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_logo"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_logo_round"
+        android:icon="@mipmap/ic_logo1"
+        android:label="mikhuy"
+        android:roundIcon="@mipmap/ic_logo1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppDeComida"
         tools:targetApi="31">
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
         <activity
             android:name=".actividades.ComidaActivity"
             android:exported="false" />
